dog follows player, but jumpy and scaling issues

--- a/public/game.css
+++ b/public/game.css
@@ -36,3 +36,10 @@ canvas {
     z-index: 999;
 }
 
+#status {
+    float: right;
+    opactiy: 0.5;
+    font: normal bold 18px Sans-Serif;
+    color: red;
+    z-index: 999;
+}
